--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Avax Foxes, an NFT Collection on Avalanche with Reflection!"
+      content="Sophia The Cat, a sketchy Kets NFT Collection"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Avax Foxes</title>
+    <title>Sophia The Cat</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
